# Importance

./: CMakeLists.txt  Main.cpp  MatrixTest  TODOList  test.xml
Data/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.h
Exception/: ExceptionNotifier.cpp  ExceptionNotifier.h
Graphics/: GL_Loader.h  Shaders.h
Graphics/glad/include/glad/: glad.h
Graphics/glad/src/: glad.c
Matrix/: FloatArray.cpp  FloatArray.h  FloatVect.h  Matrix.cpp  Matrix.h  Matrix2.h  MatrixDimensionException.cpp  MatrixDimensionException.h  SquareMatrix.cpp  SquareMatrix.h  StandardMatrix.cpp  StandardMatrix.h
Model/: Box.cpp  Material.h  Triangle.cpp  Triangle.h
Utilities/: Box.cpp  Box.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Ray.cpp  Ray.h
Vector/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.cpp  Float4.h  FloatVector.cpp  FloatVector.h
